# pyHanko

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pinact.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  SECURITY.md  appveyor.yml  beid.py  changelog.md  circle.yml  codecov.json  codecov.yml  dev-requirements.txt  mypy.ini  pdf_utils.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  run.py  setup.py  sign.py  stamp.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  gh-release-template-pyhanko-certvalidator.md  gh-release-template-pyhanko-cli.md  gh-release-template-pyhanko.md  gh-release-template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  (+3 more)
certvalidator/: __init__.py  _errors.py  _urllib.py  _version.py  context.py  crl_client.py  errors.py  ocsp_client.py  path.py  registry.py  validate.py  version.py
dev/: __init__.py  _import.py  _pep425.py  _task.py  api_docs.py  apply_version.py  build.py  ci.py  coverage.py  deps.py  include_pyhanko_testing_commons.py  lint.py  release.py  stress_test.py  tests.py  version.py
docs/: Makefile  api.md  artifact-authenticity.rst  changelog.rst  conf.py  faq.rst  index.rst  known-issues.rst  license.rst  modules.rst  pyhanko.config.rst  pyhanko.misc.rst  pyhanko.pdf_utils.barcodes.rst  pyhanko.pdf_utils.config_utils.rst  pyhanko.pdf_utils.filters.rst  pyhanko.pdf_utils.generic.rst  pyhanko.pdf_utils.images.rst  pyhanko.pdf_utils.incremental_writer.rst  pyhanko.pdf_utils.layout.rst  pyhanko.pdf_utils.misc.rst  pyhanko.pdf_utils.reader.rst  pyhanko.pdf_utils.rst  pyhanko.pdf_utils.text.rst  pyhanko.pdf_utils.writer.rst  pyhanko.rst  pyhanko.sign.rst  pyhanko.sign.signers.rst  pyhanko.stamp.rst  readme.md  usage.md
external-schemata/: .xsdata.xml  CODEGEN.md  genxml.sh
internal/common-test-utils/: pyproject.toml
internal/common-test-utils/src/pyhanko_testing_commons/test_data/: samples.py
internal/common-test-utils/src/pyhanko_testing_commons/test_data/data/crypto/: certomancer.yml
internal/common-test-utils/src/pyhanko_testing_commons/test_data/data/crypto/keys-ecdsa/: decrypter-x25519.key.pem  decrypter-x448.key.pem  decrypter1.key.pem  decrypter2.key.pem  decrypter3.key.pem  intermediate_ca.key.pem  ocsp.key.pem  root_ca.key.pem  signer.key.pem  signer2.key.pem  tsa.key.pem  tsa2.key.pem
internal/common-test-utils/src/pyhanko_testing_commons/test_data/data/crypto/keys-mldsa/: signer_mldsa44.key.pem  signer_mldsa65.key.pem  signer_mldsa87.key.pem
internal/common-test-utils/src/pyhanko_testing_commons/test_utils/: signing_commons.py
internal/common-test-utils/src/test_data/: certomancer_trust_lists.py  samples.py
internal/common-test-utils/src/test_data/data/crypto/: certomancer.yml  real-misissued-qtst-cert.cer  real-qcert.cer  real-qtst-cert.cer  selfsigned.pfx
internal/common-test-utils/src/test_data/data/crypto/keys-dsa/: signer2.key.pem
internal/common-test-utils/src/test_data/data/crypto/keys-ecdsa/: tsa.key.pem
internal/common-test-utils/src/test_data/data/crypto/keys-ed448/: tsa.key.pem
internal/common-test-utils/src/test_data/data/crypto/keys-rsa/: leaf_aa.key.pem  root_ca.key.pem
internal/common-test-utils/src/test_data/data/crypto/testing-ca-setup/: pkcs11-setup-certomancer.sh  pkcs11-setup.sh  setup-params
internal/common-test-utils/src/test_data/data/crypto/testing-ca/interm/: decrypter1.pfx  interm-ocsp.pfx  signer1.pfx
internal/common-test-utils/src/test_data/data/fonts/: LICENSE.freeserif
internal/common-test-utils/src/test_data/data/pdf/: source
internal/common-test-utils/src/test_data/data/pdf/safedocs/: SOURCE
internal/common-test-utils/src/test_data/data/tl/: COPYRIGHT  eu-lotl.xml  tsl-ee.xml
internal/common-test-utils/src/test_data/data/xml/bad-xml/: SOURCE  dtd.xml  external_file.xml  xmp-with-harmless-entity.xml
internal/common-test-utils/src/test_utils/: layout_test_utils.py  signing_commons.py
internal/common-test-utils/src/test_utils/csc_utils/: csc_dummy_client.py
internal/common-test-utils/src/test_utils/pkcs11_utils/: config.py  fixtures.py
internal/integration-tests/: pyproject.toml
internal/integration-tests/tests/: test_live_certomancer.py  test_live_csc_dummy.py
pdf_utils/: barcodes.py  crypt.py  filters.py  font.py  generic.py  images.py  incremental_writer.py  misc.py  reader.py  rw_common.py  text.py  writer.py
pdfstamp/: __main__.py  beid.py  cli.py  config.py  misc.py  sign.py  stamp.py
pdfstamp_tests/: samples.py  test_barcode.py  test_config.py  test_images.py  test_signing.py  test_text.py  test_utils.py
pyhanko/: __init__.py  __main__.py  cli.py  config.py  stamp.py  version.py
pyhanko_certvalidator/: __init__.py  _asyncio_compat.py  _eddsa_oids.py  _errors.py  _state.py  _types.py  asn1_types.py  authority.py  context.py  crl_client.py  errors.py  name_trees.py  ocsp_client.py  path.py  policy_decl.py  policy_tree.py  registry.py  revinfo_archival.py  trust_anchor.py  util.py  validate.py  version.py
pyhanko_tests/: layout_test_utils.py  samples.py  signing_commons.py  test_ades_validation.py  test_ades_validation_report.py  test_barcode.py  test_cms.py  test_config.py  test_crypt.py  test_csc.py  test_diff_analysis.py  test_embed.py  test_fields.py  test_images.py  test_key_usage_constraints.py  test_meta.py  test_pades.py  test_pdfmac.py  test_pkcs11.py  test_seed_values.py  test_sign_encrypted.py  test_signing.py  test_stamp.py  test_text.py  test_trusted_list.py  test_tsa_fetcher.py  test_utils.py  test_xref.py  with_live_certomancer.py  with_live_csc_dummy.py
requires/: api_docs  ci  coverage  lint  release
tests/: __init__.py  _unittest_compat.py  common.py  samples.py  test_ac_validate.py  test_ades_time_slide.py  test_certificate_validator.py  test_common_utils.py  test_crl_client.py  test_freshness.py  test_ocsp_client.py  test_policy_proc.py  test_registry.py  test_signing.py  test_utils.py  test_validate.py  unittest_data.py
(+812 files in other folders)
