[project]
name = "pyhanko-suite"
description = "Tools for stamping and signing PDF files"
authors = [{name = "Matthias Valvekens", email = "dev@mvalvekens.be"}]
maintainers = [{name = "Matthias Valvekens", email = "dev@mvalvekens.be"}]
license = "MIT"
requires-python = ">=3.9"
version = "0.0.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/MatthiasValvekens/pyHanko"
Documentation = "https://pyhanko.readthedocs.io/"
Changes = "https://pyhanko.readthedocs.io/en/latest/changelog.html"
"Source Code" = "https://github.com/MatthiasValvekens/pyHanko"
"Issue Tracker" = "https://github.com/MatthiasValvekens/pyHanko/issues"

[tool.mypy]
files = "pkgs/pyhanko/src"

[[tool.mypy.overrides]]
module = [
    "asn1crypto.*",
    "pkcs11.*",
    "uritools.*",
    "barcode.*",
    "PIL.*",
    "uharfbuzz.*",
    "fontTools.*",
    "qrcode.*",
    "defusedxml.*",
]
ignore_missing_imports = true

[tool.uv]
package = false
default-groups = "all"

[dependency-groups]
mypy = [
    "types-requests",
    "types-python-dateutil",
    "types-PyYAML",
    "types-tzlocal",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.uv.workspace]
members = ["pkgs/*"]

[tool.uv.sources]
pyhanko = { workspace = true }
