[project]
name = "integration-tests"
version = "0.dev0"
description = "Internal package with integration tests"
requires-python = ">=3.9"
dependencies = [
    "certomancer", "pyhanko", "pyhanko-certvalidator", "pyhanko-cli", "common-test-utils[csc]",
    "pytest>=6.1.1",
    "requests-mock>=1.8.0",
    "freezegun>=1.1.0",
    "certomancer[web-api]>=0.13.0,<0.14",
    "pytest-cov>=4.0,<7.1",
    "pytest-asyncio==0.26.0",
    "aiohttp>=3.9,<3.13",
    "pytest-aiohttp>=1.0.4,<1.2.0",
]


[tool.pytest.ini_options]
pythonpath = []
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"


[tool.coverage.report]
exclude_lines = ["pragma: no cover", "pragma: nocover", "raise AssertionError", "raise NotImplementedError", "TYPE_CHECKING", "^\\s*\\.\\.\\."]
precision = 2
